# gala

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  AUTHORS.rst  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codemeta.json  conftest.py  docs-pip-requirements-txt  environment-dev.yml  environment-docs.yml  environment.yml  pip-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: benchmarks.yml  cron-tests.yml  nix-tests.yml  tests.yml  tutorials.yml  weekly.yml  wheels.yml  windows-tests.yml
docs/: .gitignore  Makefile  _static_animations.py  _static_generator.py  benefits.rst  conf.py  contributing.rst  conventions.rst  docs.rst  getting_started.rst  glossary.rst  index.rst  install.rst  integrate_potential_example.rst  interop.rst  reference.rst  references.txt  refs.bib  supporting.rst  testing.rst  tutorials.rst  units.rst  user_guide.rst  util.rst  why.rst
docs/_code/: dynamics.py  examples.py  integrate.py  potential.py
docs/_static/: gala.css  gary.css  my-styles.css
docs/coordinates/: greatcircle.rst  index.rst  propermotion.rst  streamframes.rst
docs/dynamics/: actionangle.rst  index.rst  mockstreams.rst  nbody.rst  nd-representations.rst  nonlinear.rst  orbitfit.rst  orbits-in-detail.rst  references.txt
docs/examples/: Arbitrary-density-SCF.ipynb  Frequency-analysis.ipynb  Milky-Way-model.ipynb  Milky-Way-model.py  circ-restricted-3body.rst  integrate-helio-coords.rst  integrate-potential-example.rst  integrate-rotating-frame.rst  integrate_potential_example.rst  mock-stream-heliocentric.rst  nb_setup.py
docs/integrate/: index.rst
docs/io/: index.rst
docs/potential/: compositepotential.rst  custompotential.rst  define-milky-way-model.ipynb  define-new-potential.rst  hamiltonian-reference-frames.rst  index.rst  origin-rotation.rst  reference-frames.rst  scf-examples.rst  scf.rst  spherical-spline.rst  symmetry-coordinates.rst  time-interpolated.rst
docs/supporting/: define-milky-way-model.py
docs/tutorials/: .gitignore  Arbitrary-density-SCF.py  Milky-Way-model.py  circ-restricted-3body.rst  define-milky-way-model.py  exp.rst  integrate-barred-potential.py  integrate-potential-example.rst  integrate-rotating-frame.rst  mock-stream-heliocentric.rst  nb_setup  nb_setup.py  pyia-gala-orbit.ipynb  pyia-gala-orbit.py  spherical-spline-tutorial.py  stream-mass-loss.py  time-evolving-potential.py  v1_11_new_features.py
docs/whatsnew/: 1.0.rst  index.rst
gala/: __init__.py  _astropy_init.py  _cconfig.pxd  _compat_utils.py  cconfig.pyx  conftest.py  io.py  logging.py  mpl_style.py  setup_package.py  units.py  util.py
gala/coordinates/: __init__.py  galactocentric.py  gd1.py  greatcircle.py  helpers.py  jhelum.py  magellanic_stream.py  matrix_utilities.py  oph.py  orphan.py  pal13.py  pal5.py  pm_cov_transform.py  poincarepolar.py  propermotion.py  quaternion.py  reflex.py  setup_package.py  sgr.py  velocity_coord_transforms.py  velocity_frame_transforms.py
gala/dynamics/: __init__.py  actionangle.py  actionangle_staeckel.py  analyticactionangle.py  core.py  nonlinear.py  orbit.py  plot.py  representation_nd.py  setup_package.py  util.py
gala/integrate/: __init__.py  core.py  setup_package.py  timespec.py
gala/observation/: core.py
gala/potential/: __init__.py  ccompositepotential.pyx  cframe.pxd  cframe.pyx  common.py  core.py  cpotential.pxd  cpotential.pyx  io.py  setup_package.py  util.py
gala/tests/: coveragerc  optional_deps.py  setup_package.py  test_units.py  test_util.py
gary/: __init__.py  _astropy_init.py  conftest.py  mpl_style.py  orbitfit.py  units.py  util.py
gary/coordinates/: __init__.py  core.py  orphan.py  propermotion.py  quaternion.py  setup_package.py  sgr.py  unitsystem.py  util.py  velocity_transforms.py
gary/dynamics/: __init__.py  actionangle.py  analyticactionangle.py  core.py  naff.py  nonlinear.py  orbit.py  orbitfit.py  plot.py  setup_package.py  util.py
gary/inference/: model.py  parameter.py  prior.py
gary/integrate/: __init__.py  _dop853.pyx  _leapfrog.c  _leapfrog.h  _leapfrog.pyx  adaptivevode.py  core.py  dopri853.py  leapfrog.py  rk5.py  setup_package.py  simpsgauss.pyx  timespec.py
gary/io/: __init__.py  nbody6.py  scf.py
gary/observation/: core.py  gaia.py  rrlyrae.py
gary/potential/: __init__.py  _cbuiltin.c  _cbuiltin.h  builtin.py  busey.py  cbuiltin.pyx  core.py  cpotential.pxd  cpotential.pyx  custom.py  io.py  setup_package.py  util.py
gary/tests/: coveragerc  test_units.py
misc/: naff.py
old_docs/: index.rst
old_docs/_code/: dynamics.py  potential.py
old_docs/_static/: my-styles.css
old_docs/coordinates/: index.rst
old_docs/dynamics/: actionangle.rst
old_docs/integrate/: index.rst
old_docs/io/: index.rst
old_docs/potential/: custompotential.rst
paper/: paper.bib  paper.md
scripts/: freqmap.py  log_freqmap.py  pal5_freqmap.py  pal5_hack.py  timestep_nsteps_freqs.py
src/gala/: io.py  units.py  util.py
streamteam/: __init__.py  units.py  util.py
streamteam/coordinates/: __init__.py  core.py  frame.py  orphan.py  sgr.py  util.py
streamteam/dynamics/: __init__.py  actionangle.py  analyticactionangle.py  core.py  nonlinear.py  plot.py
streamteam/inference/: __init__.py  core.py  model.py  parameter.py  prior.py
streamteam/integrate/: __init__.py  adaptivevode.py  core.py  dopri853.py  leapfrog.py  rk5.py  timespec.py
streamteam/io/: __init__.py  core.py  nbody6.py  scf.py
streamteam/observation/: __init__.py  core.py  rrlyrae.py  time.py
streamteam/potential/: __init__.py  apw.py  builtin.py  cbuiltin.pyx  core.py  cpotential.pxd  cpotential.pyd  cpotential.pyx  custom.py  lee_suto_nfw.pyx  lm10.py  pal5.py
tests/: test_units.py
tests/benchmarks/: test_integrate.py  test_mockstream_benchmark.py  test_potentials.py  test_potentials_benchmark.py
tests/coordinates/: SgrCoord.h  Vasiliev2020-Sagittarius-subset.csv  c_pm.npy  (+13 more)
(+540 files in other folders)
