[metadata]
name = gala
version = 1.1.dev
author = Adrian M. Price-Whelan
author_email = adrn@astro.princeton.edu
description = Galactic gravitational dynamics in Python
long_description =
license = MIT
url = http://gala.adrian.pw/
edit_on_github = False
github_project = adrn/gala
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; numpy; pyyaml; cython; scipy
zip_safe = False
use_2to3 = False

[options.package_data]
* = *.c
gala = data/*
gala.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
