[metadata]
name = gala
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Galactic dynamics in Python
long_description = file: README.rst
license = MIT
license_file = LICENSE
url = http://gala.adrian.pw/
edit_on_github = False
github_project = adrn/gala
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.17
    astropy>=4.2
    pyyaml
    cython>=0.29
    scipy>=1.2
    packaging
python_requires = >=3.7
setup_requires =
    setuptools_scm
    extension-helpers
    wheel

[options.package_data]
* = *.c
gala = extra_compile_macros.h, cconfig.pyx
gala.coordinates.tests = *.txt, *.npy, SgrCoord_data
gala.dynamics = */*.pyx, */*.pxd, */*.h, nbody/nbody_helper.h
gala.integrate =
    */*.pyx
    */*.pxd
    cyintegrators/*.c
    cyintegrators/dopri/*.c
    cyintegrators/dopri/*.h
gala.potential =
    src/funcdefs.h
    potential/src/cpotential.h
    frame/src/cframe.h
    */*.pyx
    */*.pxd
    scf/tests/data/*
    potential/tests/*.yml

[options.extras_require]
# https://stackoverflow.com/a/61610341
all =
    matplotlib
    numexpr
    h5py
    tqdm
test =
    %(all)s
    pytest
    pytest-astropy
extra =
    galpy
    sympy
docs =
    %(all)s
    numpydoc
    IPython
    nbsphinx
    pydata_sphinx_theme
    sphinx
    sphinxcontrib-bibtex
    sphinx-astrorefs
    sphinx_automodapi
    sphinx_astropy
    rtds_action
    cmastro
    requests
tutorials =
    %(all)s
    %(extra)s
    cmastro
    IPython
    nbconvert
    jupyter_client
    ipykernel
    jupytext

[tool:pytest]
testpaths = "gala" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    docs/tutorials/*
    docs/_*
doctest_norecursedirs =
    docs/tutorials/*
    docs/_*

[flake8]
max-line-length = 100
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
    docs/tutorials/*: E703
ignore =
    E402
    E226
    E741
    W504
    W503
exclude =
    extern
    sphinx
    *parsetab.py
    conftest.py
    docs/conf.py
    setup.py
    gala/dynamics/_genfunc
    gala/coordinates/tests/helpers.py

[coverage:run]
omit =
    gala/_astropy_init*
    gala/conftest*
    gala/cython_version*
    gala/setup_package*
    gala/*/setup_package*
    gala/*/*/setup_package*
    gala/tests/*
    gala/*/tests/*
    gala/*/*/tests/*
    gala/version*
    gala/dynamics/_genfunc/*
    gala/coordinates/poincarepolar.py
    gala/coordinates/velocity_frame_transforms.py
    */gala/_astropy_init*
    */gala/conftest*
    */gala/cython_version*
    */gala/setup_package*
    */gala/*/setup_package*
    */gala/*/*/setup_package*
    */gala/tests/*
    */gala/*/tests/*
    */gala/*/*/tests/*
    */gala/version*
    */gala/dynamics/_genfunc/*
    */gala/coordinates/poincarepolar.py
    */gala/coordinates/velocity_frame_transforms.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
